--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -24,8 +24,12 @@
                     <img itemprop="image" class="mobile"
                       src="assets/img/logo.png" alt="Logo" /> </a>
                 </div>
+                <div class="clearfix">
+                  <marquee>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</marquee>
+                  </div>
               </div>
             </div>
+            
             <div class="header_inner_right">
               <div class="side_menu_button_wrapper right">
                 <div class="header_bottom_right_widget_holder">
