--- a/src/san-pham/nong-san-nguyen-lieu-tho.ejs
+++ b/src/san-pham/nong-san-nguyen-lieu-tho.ejs
@@ -211,7 +211,7 @@
                                   alt="" width="400" height="280" /></strong></p>
                             <h3><strong>2. ĐẠM THỰC VẬT</strong></h3>
                             <p><img class="size-full wp-image-732 aligncenter"
-                                src="../assets/img/san-pham/2.-Bắp-hạt-1024x717-e1531318511782.jpg"
+                                src="../assets/img/san-pham/BapHat.jpg"
                                 alt="" width="400" height="280" /></p>
                             <p>Với mạng lưới liên kết rộng lớn, chúng tôi đa dạng nhóm sản phẩm đạm thực vật nhằm đáp
                               ứng đúng tiêu chuẩn sản xuất của Nhà máy cùng với mức giá tốt nhất.</p>
