--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -14,19 +14,13 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo.png" alt="Logo" /> <img
-                      itemprop="image" class="light"
-                      src="/assets/img/index/logo.png" alt="Logo" /> <img
-                      itemprop="image" class="dark"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
-                    <img itemprop="image" class="sticky"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
+                      src="/assets/img/logo.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
                       src="assets/img/logo.png" alt="Logo" /> </a>
-                </div>
-                <div class="clearfix">
-                  <marquee>CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</marquee>
+                  <div class="clearfix">
+                    <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
                   </div>
+                </div>
               </div>
             </div>
             
@@ -138,15 +132,12 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/en/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo.png" alt="Logo" /> <img
-                      itemprop="image" class="light"
-                      src="/assets/img/index/logo.png" alt="Logo" /> <img
-                      itemprop="image" class="dark"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
-                    <img itemprop="image" class="sticky"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
+                      src="/assets/img/logo.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
                       src="/assets/img/logo.png" alt="Logo" /> </a> </a>
+                      <div class="clearfix">
+                        <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
+                      </div>
                 </div>
               </div>
             </div>
