--- a/src/tin-tuc-su-kien.ejs
+++ b/src/tin-tuc-su-kien.ejs
@@ -66,19 +66,19 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
-                                          href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
+                                          href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
                                       <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
                                         oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải
                                         thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
-                                      <a href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"
+                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
                                     <a
-                                      href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"><img
+                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img
                                         width="792" height="618"
-                                        src="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
+                                        src="/assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
                                         srcset="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg 792w, assets/img/tin-tuc-su-kien/img_chuoi_1-300x234.jpg 300w, assets/img/tin-tuc-su-kien/img_chuoi_1-768x599.jpg 768w, assets/img/tin-tuc-su-kien/img_chuoi_1-700x546.jpg 700w"
                                         sizes="(max-width: 792px) 100vw, 792px" /></a>
@@ -91,17 +91,17 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
-                                          href="https://www.viet-acc.com/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/">6
+                                          href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">6
                                           bước trong lập công thức thức ăn chăn nuôi</a></h3>
                                       <p>Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới
                                         ra trường mà ngay cả đối với một số chuyên gia, những người đôi khi mới đụng
                                         chạm đến vấn đề này.</p>
-                                      <a href="https://www.viet-acc.com/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/"
+                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
-                                    <a href="https://www.viet-acc.com/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi/"><img
+                                    <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img
                                         width="440" height="260"
                                         src="assets/img/tin-tuc-su-kien/1528276943562.png"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
@@ -116,18 +116,18 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
-                                          href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/">Có
+                                          href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Có
                                           thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h3>
                                       <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
                                         oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải
                                         thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
-                                      <a href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"
+                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
                                     <a
-                                      href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"><img
+                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img
                                         width="792" height="618"
                                         src="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
@@ -142,17 +142,17 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
-                                          href="https://www.viet-acc.com/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con/">Kiểm
+                                          href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Kiểm
                                           soát giá trị đệm trong thức ăn heo con</a></h3>
                                       <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm
                                         của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong
                                         bất kỳ hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
-                                      <a href="https://www.viet-acc.com/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con/"
+                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
-                                    <a href="https://www.viet-acc.com/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con/"><img
+                                    <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img
                                         width="800" height="560"
                                         src="assets/img/tin-tuc-su-kien/iStock_487525682-e1529470879149.jpg"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image"
@@ -165,16 +165,16 @@
                                   <div class="text_tintuc">
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
-                                      <h3><a href="https://www.viet-acc.com/383-2/">Điều chỉnh chế độ dinh dưỡng cho heo
+                                      <h3><a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Điều chỉnh chế độ dinh dưỡng cho heo
                                           nái trong giai đoạn chuyển tiếp khi sinh</a></h3>
                                       <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi.
                                         Dựa trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng
                                         tiên tiến đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
-                                      <a href="https://www.viet-acc.com/383-2/" class="button_learmore">Xem thêm</a>
+                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html" class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
-                                    <a href="https://www.viet-acc.com/383-2/"><img width="664" height="524"
+                                    <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img width="664" height="524"
                                         src="assets/img/tin-tuc-su-kien/tin_4.png"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
                                         srcset="assets/img/tin-tuc-su-kien/tin_4.png 664w, assets/img/tin-tuc-su-kien/tin_4-300x237.png 300w"
