--- a/src/tin-tuc-su-kien.ejs
+++ b/src/tin-tuc-su-kien.ejs
@@ -67,9 +67,7 @@
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
                                           href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
-                                      <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
-                                        oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải
-                                        thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
+                                      <p>Chất lượng đi cùng giá trị dinh dưỡng phù hợp, đồng thời, tận dụng tốt nhất nguồn nguyên liệu thay đổi liên tục - sản xuất thức ăn chăn nuôi luôn cần có một cái đầu tỉnh táo và khả năng ra quyết định nhanh nhẹn&#8230;</p>
                                       <a href="https://www.viet-acc.com/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi/"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
