--- a/src/doi-tac-chien-luoc.ejs
+++ b/src/doi-tac-chien-luoc.ejs
@@ -74,7 +74,7 @@
                                                 width="300" height="141"
                                                 srcset="assets/img/doi-tac-chien-luoc/logo_massel.svg 300w, assets/img/doi-tac-chien-luoc/logo_massel.svg 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
-                                            <h3>MASSEL</h3>
+                                            <h3>MASSEL - AUSTRALIA</h3>
                                             <p>Năm 2023, <strong>Minh Anh Group</strong> chính thức trở thành đối tác chiến
                                               lược của <strong>Massel</strong> trong việc phân phối nhóm sản phẩm không chứa gluten, lactose và các chất béo động vật, phù hợp với người ăn chay và người thuần ăn chay.</p>
                                           </div>
