- add content for news

--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -14,9 +14,9 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo.png" alt="Logo" />
+                      src="/assets/img/logo_notext.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="assets/img/logo.png" alt="Logo" /> </a>
+                      src="assets/img/logo_notext.png" alt="Logo" /> </a>
                   <div class="clearfix">
                     <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
                   </div>
@@ -132,11 +132,11 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/en/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo.png" alt="Logo" />
+                      src="/assets/img/logo_notext.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="/assets/img/logo.png" alt="Logo" /> </a> </a>
+                      src="/assets/img/logo_notext.png" alt="Logo" /> </a> </a>
                       <div class="clearfix">
-                        <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
+                        <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</p>
                       </div>
                 </div>
               </div>
