--- a/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
@@ -45,7 +45,7 @@
                   <div class="post_detail_vietacc">
                     <div class="banner_post">
                       <div class="img_post">
-                        <img src="https://www.viet-acc.com/wp-content/uploads/2018/06/banner.png">
+                        <img src="/assets/img/tin-tuc/banner.png">
                       </div>
                       <div class="banner_post_content">
                         <div class="title_h1">
@@ -55,7 +55,7 @@
                     </div>
                     <div class="post_content_vietacc">
                       <h3>6 bước trong lập công thức thức ăn chăn nuôi</h3>
-                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2018
+                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020
                       </div>
                       <div class="noidung-s">
                         <p><strong>Công thức thức ăn vẫn còn là một bí ẩn không chỉ đối với hầu hết sinh viên mới ra
@@ -78,9 +78,9 @@
                           xây dựng các khẩu phần cơ bản, nhưng khi nói đến các sản phẩm đặc thù hoặc những thay đổi đáng
                           kể, phần lớn sẽ không biết làm gì khác hơn là vẫn tuân theo những chuẩn mực thông thường.</p>
                         <p><img class="size-full wp-image-338 aligncenter"
-                            src="https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562.png" alt=""
+                            src="/assets/img/tin-tuc/1528276943562.png" alt=""
                             width="440" height="260"
-                            srcset="https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562.png 440w, https://www.viet-acc.com/wp-content/uploads/2018/06/1528276943562-300x177.png 300w"
+                            srcset="/assets/img/tin-tuc/1528276943562.png 440w, /assets/img/tin-tuc/06/1528276943562-300x177.png 300w"
                             sizes="(max-width: 440px) 100vw, 440px" /></p>
                         <p><strong>Lập công thức thành công theo chủ đích</strong></p>
                         <p>Ở đây đáng đề cập đến hai trường hợp thực sự đã xảy ra trong sự nghiệp của tôi. Là một nhà
@@ -205,73 +205,73 @@
                           <ul>
                             <li>
                               <div class="Post-image">
-                                <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
+                                <a href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html"
                                   title="Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ? thumbnail=" ><img width="
                                   792" height="618"
-                                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1.jpg"
+                                  src="/assets/img/tin-tuc/img_chuoi_1.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1.jpg 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-300x234.jpg 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-768x599.jpg 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/img_chuoi_1-700x546.jpg 700w"
+                                  srcset="/assets/img/tin-tuc/img_chuoi_1.jpg 792w, /assets/img/tin-tuc/img_chuoi_1-300x234.jpg 300w, /assets/img/tin-tuc/img_chuoi_1-768x599.jpg 768w, /assets/img/tin-tuc/img_chuoi_1-700x546.jpg 700w"
                                   sizes="(max-width: 792px) 100vw, 792px" /></a>
                               </div>
                               <div class="post-text">
                                 <div class="post-text_1">
                                   <h4><a
-                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Có
+                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                       thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2018</div>
+                                    Sáu | 2020</div>
                                   <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
                                     hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
                                     vì sao vitamin E rất quan trọng đối với&#8230;</p>
                                   <div class="view_more_relasted"><a
-                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Xem
+                                      href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Xem
                                       Thêm</a></div>
                                 </div>
                               </div>
                             </li>
                             <li>
                               <div class="Post-image">
-                                <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
+                                <a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html"
                                   title="Kiểm soát giá trị đệm trong thức ăn heo con thumbnail=" ><img width=" 800"
                                   height="560"
-                                  src="https://www.viet-acc.com/wp-content/uploads/2018/06/iStock_487525682-e1529470879149.jpg"
+                                  src="/assets/img/tin-tuc/iStock_487525682-e1529470879149.jpg"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" /></a>
                               </div>
                               <div class="post-text">
                                 <div class="post-text_1">
                                   <h4><a
-                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Kiểm
+                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                       soát giá trị đệm trong thức ăn heo con</a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2018</div>
+                                    Sáu | 2020</div>
                                   <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
                                     khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
                                     hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
                                   <div class="view_more_relasted"><a
-                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Xem
+                                      href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Xem
                                       Thêm</a></div>
                                 </div>
                               </div>
                             </li>
                             <li>
                               <div class="Post-image">
-                                <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
+                                <a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html"
                                   title="Điều chỉnh chế độ dinh dưỡng cho heo nái trong giai đoạn chuyển tiếp khi sinh thumbnail="" ><img width="
-                                  664" height="524" src="https://www.viet-acc.com/wp-content/uploads/2018/05/tin_4.png"
+                                  664" height="524" src="/assets/img/tin-tuc/tin_4.png"
                                   class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                  srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/tin_4.png 664w, https://www.viet-acc.com/wp-content/uploads/2018/05/tin_4-300x237.png 300w"
+                                  srcset="/assets/img/tin-tuc/tin_4.png 664w, /assets/img/tin-tuc/tin_4-300x237.png 300w"
                                   sizes="(max-width: 664px) 100vw, 664px" /></a>
                               </div>
                               <div class="post-text">
                                 <div class="post-text_1">
-                                  <h4><a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
+                                  <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
                                       trong giai đoạn chuyển tiếp khi sinh</a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2018</div>
+                                    Sáu | 2020</div>
                                   <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
                                     trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
                                     đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
-                                  <div class="view_more_relasted"><a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Xem Thêm</a>
+                                  <div class="view_more_relasted"><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Xem Thêm</a>
                                   </div>
                                 </div>
                               </div>
