- add content news

--- a/src/tin-tuc-su-kien.ejs
+++ b/src/tin-tuc-su-kien.ejs
@@ -66,21 +66,21 @@
                                     <div class="text_tintuc_detail">
                                       <h4>Kiến Thức Chăn Nuôi</h4>
                                       <h3><a
-                                          href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
+                                          href="/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.html">Kiểm soát chất lượng thức ăn chăn nuôi để cải thiện lợi nhuận công ty</a></h3>
                                       <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
                                         oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải
                                         thích lý do vì sao vitamin E rất quan trọng đối với&#8230;</p>
-                                      <a href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"
+                                      <a href="/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.html"
                                         class="button_learmore">Xem thêm</a>
                                     </div>
                                   </div>
                                   <div class="thumbnail">
                                     <a
-                                      href="/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.html"><img
+                                      href="/tin-tuc/kiem-soat-chat-luong-thuc-an-chan-nuoi.html"><img
                                         width="792" height="618"
-                                        src="/assets/img/tin-tuc-su-kien/img_chuoi_1.jpg"
+                                        src="/assets/img/tin-tuc-su-kien/about_home-768x502.png"
                                         class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-                                        srcset="assets/img/tin-tuc-su-kien/img_chuoi_1.jpg 792w, assets/img/tin-tuc-su-kien/img_chuoi_1-300x234.jpg 300w, assets/img/tin-tuc-su-kien/img_chuoi_1-768x599.jpg 768w, assets/img/tin-tuc-su-kien/img_chuoi_1-700x546.jpg 700w"
+                                        srcset="assets/img/tin-tuc-su-kien/about_home-768x502.png 792w, assets/img/tin-tuc-su-kien/about_home-300x196.png 300w, assets/img/tin-tuc-su-kien/about_home-768x502.png 768w, assets/img/tin-tuc-su-kien/about_home-700x458.png 700w"
                                         sizes="(max-width: 792px) 100vw, 792px" /></a>
                                   </div>
                                 </div>
