--- a/src/doi-tac-chien-luoc.ejs
+++ b/src/doi-tac-chien-luoc.ejs
@@ -106,7 +106,7 @@
                           <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
-                              <div class="  element_from_left">
+                              <div class="  element_from_right">
                                 <div>
                                   <div class="wpb_column vc_column_container vc_col-sm-6">
                                     <div class="vc_column-inner ">
@@ -149,52 +149,7 @@
                             </div>
                           </div>
                           <div
-                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row chuoi_detail_row_left display_desktop"
-                            style=' text-align:left;'>
-                            <div class=" full_section_inner clearfix">
-                              <div class="  element_from_right">
-                                <div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div class="wpb_single_image wpb_content_element vc_align_left">
-                                          <div class="wpb_wrapper">
-                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
-                                                height="618"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_2.png"
-                                                class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_2.png 792w, assets/img/doi-tac-chien-luoc/doitact_2-300x234.png 300w, assets/img/doi-tac-chien-luoc/doitact_2-768x599.png 768w, assets/img/doi-tac-chien-luoc/doitact_2-700x546.png 700w"
-                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="wpb_column vc_column_container vc_col-sm-6">
-                                    <div class="vc_column-inner ">
-                                      <div class="wpb_wrapper">
-                                        <div
-                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
-                                          <div class="wpb_wrapper">
-                                            <p><img class="alignnone size-medium wp-image-80"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
-                                                width="300" height="300"
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
-                                                sizes="(max-width: 300px) 100vw, 300px" /></p>
-                                            <h3>DIAMOND V &#8211; HOA KỲ</h3>
-                                            <p>Năm 2022, <strong>Minh Anh Group</strong> trở thành nhà phân phối chính thức và
-                                              duy nhất cung cấp nhóm sản phẩm Species-Specific và Original Line cho
-                                              thương hiệu <strong>DIAMOND V</strong> tại Việt Nam</p>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row display_mobile"
+                            class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
                             style=' text-align:left;'>
                             <div class=" full_section_inner clearfix">
                               <div class="  element_from_left">
@@ -235,6 +190,7 @@
                                       </div>
                                     </div>
                                   </div>
+                                  
                                 </div>
                               </div>
                             </div>
